refactor: enhance security configuration and CORS handling in backend services